--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@faker-js/faker": "6.1.2",
+    "@playwright/test": "^1.49.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/bcryptjs": "2.4.2",
@@ -133,8 +134,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development concurrently yarn:start:react yarn:start:api",
     "prestart": "yarn db:seed:dev",
-    "start:api": "nodemon --exec yarn tsnode --watch 'backend' backend/app.ts",
-    "start:react": "vite",
+    "start:api": "cross-env NODE_ENV=development nodemon --exec yarn tsnode --watch 'backend' backend/app.ts",
+    "start:react": "cross-env NODE_ENV=development vite",
     "db:seed": "yarn tsnode scripts/generateSeedData",
     "db:seed:dev": "ncp ./data/database-seed.json ./data/database.json",
     "postdb:seed": "yarn db:seed:dev",
