--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "jsdom": "^22.1.0",
     "json": "11.0.0",
     "jwks-rsa": "2.0.5",
+    "lint-staged": "^15.2.11",
     "lowdb": "1.0.0",
     "morgan": "1.10.0",
     "ncp": "2.0.0",
@@ -154,6 +155,13 @@
   },
   "engines": {
     "node": "^18.0.0 || >=20.0.0"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "yarn prettier --write",
+      "yarn eslint --fix"
+    ],
+    "**/*.{json,md,yml}": "yarn prettier --write"
   },
   "eslintConfig": {
     "extends": [
